--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID=instav2-2c777
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=instav2-2c777.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=931313478924
 NEXT_PUBLIC_FIREBASE_APP_ID=1:931313478924:web:f589e73233e4c407882d29
+SECRET= qwertyuiop
